Add a task to publish a post

--- a/templates/post.erb
+++ b/templates/post.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Giuseppe Modarelli</title>
-    <link rel="stylesheet" href="../github-markdown-css/github-markdown.css">
+    <link rel="stylesheet" href="github-markdown-css/github-markdown.css">
     <style>
       .markdown-body {
         box-sizing: border-box;
