--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -15,6 +15,16 @@
 
     <%- include jumbo -%>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <% posts.forEach(function(post) { %>
+            <%- include postlink %>
+          <% }) %>
+        </div>
+      </div>
+    </div>
+
     <%- include js -%>
   </body>
 </html>
