--- a/templates/post.ejs
+++ b/templates/post.ejs
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1><%= title %></h1>
+          <h1><a href="/<%= link %>"><%= title %></a></h1>
           <h6><%= date %></h6>
 
           <article class="markdown-body">
